<resources>
    <string name="app_name">BankRegistration</string>
    <string name="s">S.</string>
    <string name="first_of_the_few_steps_to_set_you_up_with_a_bank_account">First of the few steps to set you up with a Bank Account</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="axspa48498">AXSPA4849P</string>
    <string name="birthdate">BIRTHDATE</string>
    <string name="_03">03</string>
    <string name="_10">10</string>
    <string name="_1998">1998</string>
    <string name="providing_pan_amp_date_of_birth_helps_us_find_and_fetch_your_kyc_from_a_center_registry_by_the_government_of_india"><![CDATA[Providing PAN & Date of Birth helps us find and \nfetch your KYC from a center registry by the \ngovernment of India. Learn more]]></string>
    <string name="next">NEXT</string>
    <string name="i_don_t_hava_a_pan">I don\'t hava a PAN</string>
</resources>