<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="4dp"
            android:text="@string/s"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="4dp"
            android:text="@string/first_of_the_few_steps_to_set_you_up_with_a_bank_account"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:text="@string/pan_number"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/panCardEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/edittext_shape"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/axspa48498"
                android:inputType="textCapCharacters"
                android:maxLength="10"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:text="@string/birthdate"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/dateEditText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/_03"
                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="8dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/monthEditText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/_10"
                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="8dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/yearsEditText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/_1998"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="8dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descrption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:padding="4dp"
            android:text="@string/providing_pan_amp_date_of_birth_helps_us_find_and_fetch_your_kyc_from_a_center_registry_by_the_government_of_india"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/button_shape"
            android:text="@string/next"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/doNotHavePan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/i_don_t_hava_a_pan"
            android:textAlignment="center"
            android:textColor="@color/violet"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>